fix: java error